# xai-in-digital-pathology

./: .babelrc  .gitignore  CITATION.cff  Dockerfile  README.md  backup-mongodb.sh  citation.cff  docker-compose.yml  export-20210615144211.json  package-lock.json  package.json  webpack.config.js
DataProcessing/: =4.2.0  comments_dump.json  data_processing.html  data_processing.ipynb  db_06_07_21_resp.json  db_22_06_20_resp.json  db_dump.json  db_dump_greater_thursday.json  db_dump_new_files.json  pyproject.toml  results-20210622090023.json
DataProcessing/data/: 20210715082420_results.json  20210723094949_results.json  20210726170044_results.json  db_06_07_21_resp.json
DataProcessing/iframe_figures/: figure_10.html  figure_13.html  figure_14.html  figure_16.html  figure_17.html  figure_9.html
backend/: .env  database.js  index.js  models.js  package-lock.json  package.json  routes.js
backups/: backupscript.sh
data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  backupscript.sh  collection-0-6592804157343819529.wt  collection-2-6592804157343819529.wt  index-1-6592804157343819529.wt  index-3-6592804157343819529.wt  sizeStorer.wt
data/diagnostic.data/: metrics.2021-06-07T09-49-08Z-00000
frontend/: README.md  package-lock.json  package.json  webpack.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  CreateSurveyJSON.js  Survey.js  SurveyContent.js  analytics_data.js  survey.css
src/: App.js  CreateSurvey.js  CreateSurveyJSON.js  Survey.js  SurveyContent.js  survey.css  survey_json.js  survey_questions.js
(+7 files in other folders)
