[tool.poetry]
name = "dataprocessing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.5"
plotly = "^5.0.0"
colorlover = "^0.3.0"
ipykernel = "^5.5.5"
matplotlib = "^3.4.2"
nbformat = "^5.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
