[tool.poetry]
name = "xai-survey-dataprocessing"
version = "0.9.0"
description = ""
authors = ["Theodore Evans <theodore.evans@dai-labor.de>", "Carl Orge Retzlaff <carlorge.retzlaff@dai-labor.de>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.5"
plotly = "^5.0.0"
colorlover = "^0.3.0"
matplotlib = "^3.4.2"
nbformat = "^5.1.3"
jupyter = "^1.0.0"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
